--- a/jarjar-command/build.gradle
+++ b/jarjar-command/build.gradle
@@ -1,12 +1,27 @@
+plugins {
+    id 'application'
+}
+
+application {
+    mainClass = 'com.tonicsystems.jarjar.Main'
+}
+
+dependencies {
+    implementation project(':jarjar-core')
+    implementation 'net.sf.jopt-simple:jopt-simple:4.8'
+}
+
 jar {
     manifest {
         attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'com.tonicsystems.jarjar.Main'
+                'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
+                'Main-Class': application.mainClass
         )
     }
 
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from sourceSets.main.output
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
