--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,5 @@
 rootProject.name='jarjar'
 include 'jarjar-testdata',
 	'jarjar-core',
-	'jarjar-ant',
-	'jarjar-maven',
-	'jarjar-gradle',
 	'jarjar-command'
+	// currently disabled: 'jarjar-gradle'
